--- a/res/layout/fragment_book_list.xml
+++ b/res/layout/fragment_book_list.xml
@@ -5,11 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".BookListFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
     <ListView
-        android:id="@+id/BookListView"
+        android:id="@+id/bookList"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
 </FrameLayout>
